--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "load": "node src/utils/data_loader.js --",
     "lint": "./node_modules/eslint/bin/eslint.js src tests",
     "start": "node ./src/app.js",
-    "test": "jest --no-colors",
+    "test": "jest",
     "testdev": "jest --watch"
   },
   "author": "Redis Labs",
@@ -41,7 +41,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4"
   }
 }
